# nfl-analytics-app

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  prompt_plan.md  spec.md  test-login-ui.html  todo.md
backend/: .air.toml  go.mod  go.sum  test_jwt.go
backend/migrations/: 001_create_users_table.sql  002_create_leagues_table.sql  003_create_draft_tables.sql  003_create_leagues_table.sql  004_create_draft_tables.sql  004_create_logs_table.sql  005_create_projections_tables.sql  fix_users_table.sql
data-pipeline/: README.md  __init__.py  init_duckdb.py  load_parquet_data.py  load_projections.py  pyproject.toml  requirements.txt
data-pipeline/analytics/: __init__.py  boom_bust.py  consistency.py  matchup_strength.py  red_zone.py  target_share.py
data-pipeline/database/: connection.py  duckdb_init.sql
data-pipeline/extractors/: __init__.py  base_extractor.py  config.py  espn_extractor.py  nflverse_extractor.py  projections_extractor.py
data-pipeline/models/: schema.py
data-pipeline/orchestration/: daily_update.py  extract_nfl_data.py  transform_data.py
data-pipeline/tests/: test_boom_bust.py  test_consistency.py  test_duckdb_setup.py  test_integration.py
data-pipeline/transformers/: __init__.py  aggregator.py  cleaner.py  consensus_aggregator.py  fantasy_calculator.py
docker/: backend.Dockerfile  frontend.Dockerfile  pipeline.Dockerfile
docs/: ESPN_AUTHENTICATION.md
frontend/: middleware.ts  tailwind.config.js
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx
frontend/components/: Layout.tsx  MetricsChart.tsx  ModernLayout.tsx  (+5 more)
(+87 files in other folders)
